--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your App Name</title>
+  <title>Nagimo</title>
   <link href="/static/css/main.css" rel="stylesheet">
 </head>
 
